--- a/ranger/rc.conf
+++ b/ranger/rc.conf
@@ -1,3 +1,4 @@
+set editor vim
 # ===================================================================
 # This file contains the default startup commands for ranger.
 # To change them, it is recommended to create either /etc/ranger/rc.conf
