--- a/.tmux.conf
+++ b/.tmux.conf
@@ -9,7 +9,7 @@ unbind C-b
 set-option -g history-limit 100000
 
 # enable mouse
-set-option -g mouse on
+#set-option -g mouse on
 
 # fix remaining word
 set -s set-clipboard off
