--- a/ranger/rc.conf
+++ b/ranger/rc.conf
@@ -139,7 +139,10 @@ set show_hidden_bookmarks true
 
 # Which colorscheme to use?  These colorschemes are available by default:
 # default, jungle, snow, solarized
-set colorscheme default
+#set colorscheme default
+set colorscheme catppuccin_mocha
+
+
 
 # Preview files on the rightmost column?
 # And collapse (shrink) the last column if there is nothing to preview?
