fzfをサブモジュールとして追加

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "fzf/fzf/.config/fzf"]
 	path = fzf/fzf/.config/fzf
 	url = https://github.com/junegunn/fzf.git
+[submodule "fzf/.config/fzf"]
+	path = fzf/.config/fzf
+	url = https://github.com/junegunn/fzf.git
