--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -1,10 +1,11 @@
 # シェルを設定してください
 #set-option -g default-shell /bin/zsh
-set-option -g default-shell /usr/bin/zsh
+#macは/bin/zshに修正して
+set-option -g default-shell /bin/zsh
 
 # set prefix key
-set -g prefix C-s
 unbind C-b
+set -g prefix C-g
 
 set-option -g history-limit 100000
 
