--- a/ranger/.config/ranger/rc.conf
+++ b/ranger/.config/ranger/rc.conf
@@ -24,6 +24,7 @@
 #     miller: Use miller columns which show multiple levels of the hierarchy
 #     multipane: Midnight-commander like multipane view showing all tabs next
 #                to each other
+set editor vim
 set viewmode miller
 #set viewmode multipane
 
