--- a/ranger/.config/ranger/rifle.conf
+++ b/ranger/.config/ranger/rifle.conf
@@ -86,9 +86,9 @@ ext x?html?, has w3m,               terminal = w3m "$@"
 #-------------------------------------------
 # Define the "editor" for text files as first action
 mime ^text,  label editor = vim -- "$@"
-mime ^text,  label pager  = "$PAGER" -- "$@"
+mime ^text,  label pager  = bat --paging=always -- "$@"
 !mime ^text, label editor, ext xml|json|csv|tex|py|pl|rb|js|sh|php = vim -- "$@"
-!mime ^text, label pager,  ext xml|json|csv|tex|py|pl|rb|js|sh|php = "$PAGER" -- "$@"
+!mime ^text, label pager,  ext xml|json|csv|tex|py|pl|rb|js|sh|php = bat --paging=always -- "$@"
 
 ext 1                         = man "$1"
 ext s[wmf]c, has zsnes, X     = zsnes "$1"
@@ -153,7 +153,7 @@ ext pdf, has epdfview, X, flag f = epdfview -- "$@"
 ext pdf, has qpdfview, X, flag f = qpdfview "$@"
 ext pdf, has open,     X, flag f = open "$@"
 
-ext docx?, has catdoc,       terminal = catdoc -- "$@" | "$PAGER"
+ext docx?, has catdoc,       terminal = catdoc -- "$@" | bat --paging=always
 
 ext                        sxc|xlsx?|xlt|xlw|gnm|gnumeric, has gnumeric,    X, flag f = gnumeric -- "$@"
 ext                        sxc|xlsx?|xlt|xlw|gnm|gnumeric, has kspread,     X, flag f = kspread -- "$@"
@@ -211,11 +211,11 @@ ext iso|jar|msi|pkg|rar|shar|tar|tgz|xar|xpi|xz|zip, has atool = atool --extract
 ext tar|gz|bz2|xz, has tar = tar vvtf "$1" | "$PAGER"
 ext tar|gz|bz2|xz, has tar = for file in "$@"; do tar vvxf "$file"; done
 ext bz2, has bzip2 = for file in "$@"; do bzip2 -dk "$file"; done
-ext zip, has unzip = unzip -l "$1" | less
+ext zip, has unzip = unzip -l "$1" | bat --paging=always
 ext zip, has unzip = for file in "$@"; do unzip -d "${file%.*}" "$file"; done
-ext ace, has unace = unace l "$1" | less
+ext ace, has unace = unace l "$1" | bat --paging=always
 ext ace, has unace = for file in "$@"; do unace e "$file"; done
-ext rar, has unrar = unrar l "$1" | less
+ext rar, has unrar = unrar l "$1" | bat --paging=always
 ext rar, has unrar = for file in "$@"; do unrar x "$file"; done
 
 #-------------------------------------------
@@ -268,7 +268,7 @@ label open, has open     = open -- "$@"
 # Define the editor for non-text files + pager as last action
               !mime ^text, !ext xml|json|csv|tex|py|pl|rb|js|sh|php  = ask
 label editor, !mime ^text, !ext xml|json|csv|tex|py|pl|rb|js|sh|php  = ${VISUAL:-$EDITOR} -- "$@"
-label pager,  !mime ^text, !ext xml|json|csv|tex|py|pl|rb|js|sh|php  = "$PAGER" -- "$@"
+label pager,  !mime ^text, !ext xml|json|csv|tex|py|pl|rb|js|sh|php  = bat --paging=always -- "$@"
 
 
 ######################################################################
