--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -3,9 +3,33 @@ set -g prefix C-g
 unbind C-b
 bind C-g send-prefix
 
+# TPM Plugin Manager設定
+# プラグインディレクトリの設定
+set-environment -g TMUX_PLUGIN_MANAGER_PATH '~/.config/tmux/plugins/'
+
+# プラグインリスト
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @plugin 'catppuccin/tmux#latest'
+set -g @plugin 'fcsonline/tmux-thumbs'
+set -g @plugin 'sainnhe/tmux-fzf'
+set -g @plugin 'wfxr/tmux-fzf-url'
+
+# プラグイン設定
+set -g @resurrect-strategy-vim 'session'
+set -g @resurrect-strategy-nvim 'session'
+set -g @continuum-restore 'on'
+set -g @continuum-save-interval '15'
+
 # OS判定
 if-shell "uname | grep -q Darwin" "source-file ~/.config/tmux/.tmux.conf.mac"
 if-shell "uname | grep -q Linux" "source-file ~/.config/tmux/.tmux.conf.lin"
 if-shell "uname | grep -q Microsoft" "source-file ~/.config/tmux/.tmux.conf.wsl"
 # Windows (Git Bashなど) の場合は、uname が MINGW を返すことがあります
 if-shell "uname | grep -q MINGW" "source-file ~/.config/tmux/.tmux.conf.win"
+
+# TPMの初期化（この行は設定ファイルの最後に置く必要があります）
+run '~/.config/tmux/plugins/tpm/tpm'
