--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -17,6 +17,8 @@ set -g @plugin 'catppuccin/tmux#latest'
 set -g @plugin 'fcsonline/tmux-thumbs'
 set -g @plugin 'sainnhe/tmux-fzf'
 set -g @plugin 'wfxr/tmux-fzf-url'
+set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
+set -g @plugin 'b0o/tmux-autoreload'
 
 # プラグイン設定
 set -g @resurrect-strategy-vim 'session'
