--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -188,7 +188,7 @@ bindsym $mod+r mode "resize"
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-        status_command i3status
+        status_command /home/elpeople/dotfiles/local_bin/local/bin/i3status_wrapper.sh
 }
 exec --no-startup-id picom -CGm 0.70
 bindsym Mod1+Tab exec --no-startup-id rofi -show window
