--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -8,12 +8,12 @@ bind C-g send-prefix
 set-environment -g TMUX_PLUGIN_MANAGER_PATH '~/.config/tmux/plugins/'
 
 # プラグインリスト
+set -g @plugin 'catppuccin/tmux#v3.5a'
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
-set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'fcsonline/tmux-thumbs'
 set -g @plugin 'sainnhe/tmux-fzf'
 set -g @plugin 'wfxr/tmux-fzf-url'
@@ -21,6 +21,7 @@ set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 set -g @plugin 'b0o/tmux-autoreload'
 
 # プラグイン設定
+set -g @catppuccin_flavour 'mocha'
 set -g @resurrect-strategy-vim 'session'
 set -g @resurrect-strategy-nvim 'session'
 set -g @continuum-restore 'on'
@@ -34,4 +35,34 @@ if-shell "uname | grep -q Microsoft" "source-file ~/.config/tmux/.tmux.conf.wsl"
 if-shell "uname | grep -q MINGW" "source-file ~/.config/tmux/.tmux.conf.win"
 
 # TPMの初期化（この行は設定ファイルの最後に置く必要があります）
+# プラグインのインストール (prefix + I)
+bind I run '~/.config/tmux/plugins/tpm/bin/install_plugins'
+
+# TPMの初期化（この行は設定ファイルの最後に置く必要があります）
 run '~/.config/tmux/plugins/tpm/tpm'
+
+# Catppuccin status bar configuration
+set -g status-left "#{E:@catppuccin_status_session}"
+set -g status-right "#{E:@catppuccin_status_date_time}"
+
+
+# プラグイン詳細設定
+# tmux-yank 設定
+set -g @yank_selection_mouse 'clipboard'
+set -g @yank_action 'copy-pipe-no-clear'
+
+# tmux-thumbs 設定  
+set -g @thumbs-key F
+set -g @thumbs-alphabet qwerty
+set -g @thumbs-reverse enabled
+set -g @thumbs-unique enabled
+
+# tmux-fzf 設定
+set -g @fzf-url-bind 'u'
+
+# tmux-prefix-highlight 設定
+set -g @prefix_highlight_fg 'white'
+set -g @prefix_highlight_bg 'blue'
+set -g @prefix_highlight_show_copy_mode 'on'
+set -g @prefix_highlight_copy_mode_attr 'fg=black,bg=yellow,bold'
+
