--- a/vim/dein.toml
+++ b/vim/dein.toml
@@ -20,6 +20,12 @@ hook_add = '''
   set background=dark
   let g:catppuccin_flavour = "mocha"
   au MyAutoCmd VimEnter * nested colorscheme catppuccin_mocha
+  " カラースキーム適用後に透過設定を再適用
+  autocmd ColorScheme * highlight Normal ctermbg=NONE guibg=NONE
+  autocmd ColorScheme * highlight NonText ctermbg=NONE guibg=NONE
+  autocmd ColorScheme * highlight LineNr ctermbg=NONE guibg=NONE
+  autocmd ColorScheme * highlight Folded ctermbg=NONE guibg=NONE
+  autocmd ColorScheme * highlight EndOfBuffer ctermbg=NONE guibg=NONE
 '''
 
 [[plugins]]
