--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -66,3 +66,5 @@ set -g @prefix_highlight_bg 'blue'
 set -g @prefix_highlight_show_copy_mode 'on'
 set -g @prefix_highlight_copy_mode_attr 'fg=black,bg=yellow,bold'
 
+# for kitty graphics protocol
+set -g allow-passthrough on
