mac tmux tpm catppuccin

--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -41,9 +41,29 @@ bind I run '~/.config/tmux/plugins/tpm/bin/install_plugins'
 # TPMの初期化（この行は設定ファイルの最後に置く必要があります）
 run '~/.config/tmux/plugins/tpm/tpm'
 
+# Catppuccinテーマを強制的に読み込み
+run '~/.config/tmux/plugins/catppuccin/catppuccin.tmux'
+
 # Catppuccin status bar configuration
-set -g status-left "#{E:@catppuccin_status_session}"
-set -g status-right "#{E:@catppuccin_status_date_time}"
+# デフォルトのCatppuccinステータスバーを使用
+set -g @catppuccin_window_left_separator ""
+set -g @catppuccin_window_right_separator " "
+set -g @catppuccin_window_middle_separator " █"
+set -g @catppuccin_window_number_position "right"
+
+set -g @catppuccin_window_default_fill "number"
+set -g @catppuccin_window_default_text "#W"
+
+set -g @catppuccin_window_current_fill "number"
+set -g @catppuccin_window_current_text "#W"
+
+set -g @catppuccin_status_modules_right "directory user host session"
+set -g @catppuccin_status_left_separator  " "
+set -g @catppuccin_status_right_separator ""
+set -g @catppuccin_status_fill "icon"
+set -g @catppuccin_status_connect_separator "no"
+
+set -g @catppuccin_directory_text "#{pane_current_path}"
 
 
 # プラグイン詳細設定
