--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -65,6 +65,11 @@ set -g @catppuccin_status_connect_separator "no"
 
 set -g @catppuccin_directory_text "#{pane_current_path}"
 
+# ステータスバーの設定（catppuccinモジュールを使用）
+set -g status-left ""
+set -g status-right "#{E:@catppuccin_status_directory}#{E:@catppuccin_status_user}#{E:@catppuccin_status_host}#{E:@catppuccin_status_session}"
+set -g status-right-length 100
+set -g status-left-length 100
 
 # プラグイン詳細設定
 # tmux-yank 設定
