--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -93,3 +93,15 @@ set -g @prefix_highlight_copy_mode_attr 'fg=black,bg=yellow,bold'
 
 # for kitty graphics protocol
 set -g allow-passthrough on
+
+# ===================================
+# auto start tmux and restore
+# ===================================
+
+# auto start terminal
+set -g @continuum-boot 'on'
+set -g @continuum-boot-options 'iterm'
+
+# auto restore tmux
+set -g @continuum-restore 'on'
+
