--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -105,3 +105,11 @@ set -g @continuum-boot-options 'iterm'
 # auto restore tmux
 set -g @continuum-restore 'on'
 
+# Disable mouse to prevent ?69h issues
+set -g mouse off
+set -as terminal-features ",*:RGB"
+set -as terminal-overrides ",*:Tc"
+
+# rmpc music player keybindings  
+bind-key m new-session -s music rmpc
+bind-key M display-popup -w 80% -h 80% -E rmpc
