--- a/aerospace/.config/aerospace/aerospace.toml
+++ b/aerospace/.config/aerospace/aerospace.toml
@@ -156,6 +156,7 @@ alt-shift-9 = 'move-node-to-workspace 9'
 #alt-shift-d = 'move-node-to-workspace D'
 #alt-shift-e = 'move-node-to-workspace E'
 #alt-shift-f = 'move-node-to-workspace F'
+alt-shift-f = 'fullscreen'
 #alt-shift-g = 'move-node-to-workspace G'
 #alt-shift-i = 'move-node-to-workspace I'
 #alt-shift-m = 'move-node-to-workspace M'
